<resources>
    <string name="app_name">TaskList</string>
    <string name="set_time">set_time</string>
    <string name="task_title">Nama Barang</string>
    <string name="enter_task_title">Masukkan nama barang</string>
    <string name="todo">TODO</string>
    <string name="set_date">Set Date</string>
    <string name="setting_tanggal">Setting Tanggal</string>
    <string name="masukkan_jumlah_barang">Masukkan Jumlah Barang</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="client_id">1092077423219-rgb6506caelhkftlkfr459h9eamkvof0.apps.googleusercontent.com</string>
</resources>